# cached-dns-resolver

./: Cargo.toml  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/https/: Cargo.toml
examples/https/src/: main.rs
src/: lib.rs
