[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached-dns-resolver = { path = "../.." }
hyper = { version = "0.14.17", features = ["client", "http1", "tcp"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
